// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validateConfig should throw and should print validation errors for invalid config 1`] = `
"✖ Validation Error:

  Invalid value for 'foo': false

  Should be a string, a function, or an array of strings and functions."
`;

exports[`validateConfig should throw and should print validation errors for invalid config 1 1`] = `"Configuration should be an object or a function"`;

exports[`validateConfig should throw for empty config 1`] = `"Configuration should not be empty"`;

exports[`validateConfig should throw when detecting deprecated advanced configuration 1`] = `
"✖ Validation Error:

  Invalid value for 'chunkSize': 10

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'concurrent': false

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'globOptions': { matchBase: false }

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'ignore': [ 'test.js' ]

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'linters': { '*.js': [ 'eslint' ] }

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'relative': true

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'renderer': 'silent'

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'subTaskConcurrency': 10

  Advanced configuration has been deprecated."
`;

exports[`validateConfig should throw when detecting deprecated advanced configuration 2`] = `
"
ERROR ✖ Validation Error:

  Invalid value for 'chunkSize': 10

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'concurrent': false

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'globOptions': { matchBase: false }

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'ignore': [ 'test.js' ]

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'linters': { '*.js': [ 'eslint' ] }

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'relative': true

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'renderer': 'silent'

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'subTaskConcurrency': 10

  Advanced configuration has been deprecated. Failed to parse config from file ".lintstagedrc.json".

✖ Validation Error:

  Invalid value for 'chunkSize': 10

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'concurrent': false

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'globOptions': { matchBase: false }

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'ignore': [ 'test.js' ]

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'linters': { '*.js': [ 'eslint' ] }

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'relative': true

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'renderer': 'silent'

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'subTaskConcurrency': 10

  Advanced configuration has been deprecated.

See https://github.com/okonet/lint-staged#configuration.
ERROR Error: ✖ Validation Error:

  Invalid value for 'chunkSize': 10

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'concurrent': false

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'globOptions': { matchBase: false }

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'ignore': [ 'test.js' ]

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'linters': { '*.js': [ 'eslint' ] }

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'relative': true

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'renderer': 'silent'

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'subTaskConcurrency': 10

  Advanced configuration has been deprecated. Failed to parse config from file ".lintstagedrc.json".

Error: ✖ Validation Error:

  Invalid value for 'chunkSize': 10

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'concurrent': false

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'globOptions': { matchBase: false }

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'ignore': [ 'test.js' ]

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'linters': { '*.js': [ 'eslint' ] }

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'relative': true

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'renderer': 'silent'

  Advanced configuration has been deprecated.

✖ Validation Error:

  Invalid value for 'subTaskConcurrency': 10

  Advanced configuration has been deprecated.

See https://github.com/okonet/lint-staged#configuration."
`;
